syntax = "proto3";

package helloworld;

service HelloWorld {
    rpc SayHello(SayHelloRequest) returns (SayHelloResponse);

    rpc List(StreamRequest) returns (stream StreamResponse);
    rpc Record(stream StreamRequest) returns (StreamResponse);
    rpc Route(stream StreamRequest) returns (stream StreamResponse);
}

message SayHelloRequest {
    string ping = 1;
}

message SayHelloResponse {
    string pong = 1;
}

message StreamPoint {
    string name = 1;
    int32 value = 2;
}
message StreamRequest {
    StreamPoint pt = 1;
}

message StreamResponse {
    StreamPoint pt = 1;
}
